[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
once_cell = "1.12.0"
# We are not using fake >= 2.4 because it relies on rand 0.8
# which has been recently released and it is not yet used by
# quickcheck (solved in its upcoming 1.0 release!)
fake = "~2.3"
linkify = "0.9.0"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["v4"] }
chrono = { version = "0.4.19", default_features = false, features = ["clock"] }
config = "0.13.1"
tracing = {version = "0.1.35", features = ["log"]}
tracing-subscriber = { version = "0.3.14", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.0"
serde-aux = "3.1.0"
url = "2.2.2"
substring = "1.4.5"
unicode-segmentation = "1.9.0"
claim = "0.5.0"
validator = "0.15.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# We need the `std_rng` to get access to the PRNG we want
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1.0.37"
anyhow = "1.0.65"
base64 = "0.13.1"
sha3 = "0.10.6"
argon2 = {version = "0.4.1", features = ["std"]}


# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]

# Commented for now since it seems it is not having effect (cargo check says is unused)
# [target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
# [target.x86_64-pc-windows-gnu]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
